# obsidian-runny

./: .gitignore  README.md  make.py  pyproject.toml
.github/workflows/: tests.yaml
obsidian_runny/: __init__.py  annotations.py  config.py  containers.py  uri_handling.py
obsidian_runny/mappings/: __init__.py  param_dict.py
obsidian_runny/mappings/iteration/: __init__.py  keygrabs.py
tests/unit/: test_containers.py
tests/unit/containers/: test_iter_as_pairs.py  test_keygrabs.py  test_paramdict.py
